Needed to push to run 'npm run eject'

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>GroupUs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,4 +39,15 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+<style>
+  *,
+  *:after,
+  *:before {
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+  }
+</style>
+
 </html>
